Fix mobile and flickering issues (#26)
* Add a mobile menu for small screens (< 600px)
* Fix the scaling of the image banner on the main page
* Fix font-size related issues on the main page
* Fix mobile menu link
* Introduce slower opening of publisher modal to reduce flickering effect

---------

--- a/src/frontend/css/mainPage/banner.css
+++ b/src/frontend/css/mainPage/banner.css
@@ -11,7 +11,7 @@
 .textContainer {
     color: var(--color-brand-darkBlue);
     background-color: var(--color-white-90);
-    border: 4px solid var(--color-brand-darkBlue);
+    border: 0.25rem solid var(--color-brand-darkBlue);
     border-radius: 0.5rem;
 }
 
@@ -20,8 +20,7 @@
     letter-spacing: 0.1px;
     padding-top: 0.5rem;
     font-size: clamp(1.8rem, 3.5vw, 3.8rem);
-    /* Using important to override the default font-family of H1 */
-    font-family: Georgia, serif !important;
+    font-family: Georgia, serif;
 }
 
 .textContainer > div {
@@ -38,54 +37,64 @@
     padding: 1rem;
     letter-spacing: 0.2px;
     line-height: 2rem;
-    font-size: clamp(0.7rem, 1vw, 1.5rem);
+    font-size: clamp(0.8rem, 1vw, 1.5rem);
     font-weight: 400;
-    /* Using important to override the default font-family of H2 */
-    font-family: "Open Sans", Helvetica, sans-serif !important;
+    font-family: "Open Sans", Helvetica, sans-serif;
 }
 
-@media (min-width:1550px) {
+@media (width > 1550px) {
     .bannerContainer {
         height: 25rem;
     }
 }
 
-@media (max-width:1200px) {
+@media (width < 1200px) {
     .textContainer {
         max-width: 90%
     }
+
+    .bannerContainer {
+        height: 22.5rem;
+    }
 }
 
-@media (max-width:1000px) {
+@media (width < 1000px) {
     .bannerContainer {
-        height: 25rem;
+        height: 30rem;
     }
 
-    .textContainer > div {
+    .bannerContainer > .textContainer > div {
+        display: flex;
         flex-direction: column;
         gap: 1rem;
-        margin: 0.5rem 0 1rem;
     }
 
-    .textContainer > div > div {
+    .bannerContainer > .textContainer > div > div {
         width: 100%;
     }
 }
 
-@media (max-width:800px) {
+@media (width < 700px) {
     .bannerContainer {
-        height: 28rem;
+        height: 32.5rem;
     }
 }
 
-@media (max-width:550px) {
+@media (width < 475px) {
     .bannerContainer {
-        height: 30rem;
+        height: 35rem;
+    }
+    .textContainer > div {
+        margin: 0.5rem 0 1rem;
+    }
+
+    .bannerContainer > .textContainer > div {
+        gap: 0.5rem;
     }
 }
 
-@media (max-width:450px) {
+@media (width < 360px) {
     .bannerContainer {
-        margin-top: 1rem;
+        height: 40rem;
     }
 }
